--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -14,5 +15,8 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "mysql": "^2.5.4"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
   }
 }
